remove j18 features for j17 compatibility